--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ header nav a.active{
     font-size: 1em;
     min-height: 40.62em;
     color: #fff;
-    background: linear-gradient(rgba(0, 0, 0, .30)0%, rgba(0, 0, 0, .30) 100%), url(/assets/mlolzwV6VrKOZJ1SfYbPHXXDD4p.jpg);
+    background: linear-gradient(rgba(0, 0, 0, .30)0%, rgba(0, 0, 0, .30) 100%), url(./assets/mlolzwV6VrKOZJ1SfYbPHXXDD4p.jpg);
     background-position: center center;
     background-size: cover;
     margin-bottom: 3.12em;
