--- a/css/styles.css
+++ b/css/styles.css
@@ -20,14 +20,11 @@ body{
     margin:0 auto;
 }
 
-header{
-    padding: 1.875em 0;
-}
-
 header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 0.625rem;
 }
 
 header p{
@@ -56,8 +53,8 @@ header nav a.active{
 }
 
 .banner {
-    font-size: 1em;
     display: grid;
+    font-size: 1em;
     place-content: center;
     text-align: center;
     min-height: 45.62em;
@@ -69,6 +66,7 @@ header nav a.active{
 
 .banner .container{
     margin: 0 auto;
+    border-radius: 0.31em;
     background-color: rgba(0, 0, 0, .7);
 }
 
@@ -98,18 +96,22 @@ b{
     font-family: 'open sans' , sans-serif;
     font-weight: 600;
     font-size: 2.5rem;
+    margin-bottom: 1em;
 }
 
 #submit{
     background: var(--font);
+    color: #fff;
     border: none;
     border-radius: 0.31em;
-    padding: 0.60rem 1rem 0.60rem 1rem;
-    margin-left: 1.25em;
+    padding: 1.2rem;
     transition: .3 ease all;
     font-size: 0.40em;
     cursor: pointer;
-    margin-bottom: 0.425rem;
+}
+
+#submit i{
+    margin-left: 0.31em;
 }
 
 #submit:hover{
@@ -117,15 +119,25 @@ b{
     color: var(--font);
 }
 
-#email-label{
-    padding-right: 1.25rem;
+#email-input{
+    padding: 1.2rem;
 }
 
-#email{
-    padding: 0.5rem;
-    margin-bottom: 5em;
+.membership{
+
 }
 
+.membership .container{
+    place-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 3fr));
+    grid-column-gap: 1rem;
+}
+
+
+ul{
+    padding: 0.8em;
+}
 
 
 @media screen and (max-width: 768px) {
