--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body{
 }
 
 .container{
-    max-width: 90%;
+    max-width: 1200px;
     margin:0 auto;
 }
 
@@ -66,6 +66,7 @@ header nav a.active{
 
 .banner .container{
     margin: 0 auto;
+    padding: 2rem;
     border-radius: 0.31em;
     background-color: rgba(0, 0, 0, .7);
 }
@@ -123,22 +124,108 @@ b{
     padding: 1.2rem;
 }
 
-.membership{
+.member{
+    margin: 0 auto;
+    padding: 2em;
+}
 
+.membership{
+    background-image: linear-gradient(rgba(0, 0, 0, .80)0%, rgba(0, 0, 0, .80) 100%), url(/assets/2020-01-Discurso-Tom-Hanks.jpg);
+    background-size: cover;
+    background-position: center 500px;
 }
 
 .membership .container{
+    text-align: center;
+    margin: 0 auto;
+    min-height: 300px;
     place-content: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 3fr));
-    grid-column-gap: 1rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.card{
+    color: #fff;
+    border-radius: 5px;
+    padding: 1.5em;
+    margin-bottom: 1em;
+    border: 4px solid var(--font);
+}
+
+.card h3{
+    font-family: 'open sans' , sans-serif;
+    font-size: 2em;
 }
 
 
 ul{
+    list-style: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+ul li{
+    margin: 1em;
     padding: 0.8em;
 }
 
+#join{
+    background: var(--font);
+    color: #fff;
+    border: none;
+    border-radius: 0.31em;
+    padding: 1.2em 9.2em;
+    transition: .3s ease all;
+    cursor: pointer;
+}
+
+#join:hover{
+    background: rgb(190, 35, 35);
+    color: #fff;
+}
+
+#join i{
+    margin-left: 0.31em;
+}
+
+.divisor{
+    height: 4px;
+    background-color: rgb(114, 111, 111);
+    margin: 2em 0;
+}
+
+#video{
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.vid_container{
+    display: grid;
+    width: 100%;
+    height: 0px;
+    position: relative;
+    place-content: center;
+    padding-top: 56.25%;
+}
+
+@media screen and (max-width: 1024px) {
+    .membership .container {
+        flex-wrap: wrap;
+        
+    }
+
+    .card{
+        font-size: 1em;
+    }
+
+    .join{
+        font-size: 2em;
+        padding: 1.2em 8.2em;
+    }
+}
 
 @media screen and (max-width: 768px) {
     #header-img{
